# kafka-streaming-job

./: .gitignore  Makefile  README.md  application.conf  build.sbt  driver.py  setup.cfg  spark-defaults.conf
docker/: Dockerfile
kafka_streaming_job/: __init__.py  config.py  iomete_logger.py  main.py
kafka_streaming_job/sync/: _data_sync.py  avro_sync.py  json_sync.py
kafka_streaming_job/tests/: __init__.py  _spark_session.py  application-avro.conf  application-json.conf  integration_test.py
kafka_streaming_job/tests/producer/: docker-compose.yml  kafka_producer.py
src/main/scala/com/iomete/spark/kafkastreaming/: KafkaAvroProcessor.scala  KafkaJsonProcessor.scala  KafkaStreaming.scala  SerializationFormat.scala  StreamProcessor.scala
src/main/scala/com/iomete/spark/kafkastreaming/serializer/: AvroDeserializer.scala
src/main/scala/com/iomete/spark/kafkastreaming/util/: SparkUtils.scala
