[metadata]
name = kafka_streaming_job
version = 0.3.0
author = Fuad Musayev
author_email = fuad@iomete.com
description = Kafka streaming job for migration data from kafka to iceberg.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = kafka_streaming_job
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = kafka_streaming_job
install_requires =
    pyhocon~=0.3.59
    setuptools~=60.2.0
    confluent_kafka~=1.8.2
    requests

[options.extras_require]
dev =
    pyspark==3.1.2
    pytest==7.1.2


